Fix: Nav bar where the nav bar was not overlapping main section

--- a/index.css
+++ b/index.css
@@ -9,12 +9,13 @@
     padding: 0px;
 }
 body{
-    z-index: 0;
+    position: relative;
 }
 nav{
     display: flex;
     position: relative;
     background-color:var(--primary);
+    width: 100vw;
     z-index: 100;
 }
 .inside{
@@ -59,6 +60,10 @@ ul li:hover{
     right: 20px;
     top: 19px;
     display: none;
+}
+main{
+    z-index: 0;
+    position: absolute;
 }
 @media (min-width: 789px) and (max-width: 899px) {
     .brandName{
